# recursivegarden

./: .env_sample  .gitignore  Justfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.app.json  vite.config.ts
backend/: asgi.py  settings.py  urls.py
backend/core/: models.py
backend/core/management/commands/: create_demo_data.py
backend/templates/: base.html  components.yaml
backend/templates/core/: vue_widget.html
backend/templates/zettle/: zettlecards.html
backend/templates/zettle/components/: ctx_file.html
backend/users/: admin.py  factories.py  models.py
backend/users/migrations/: 0001_initial.py
backend/zettle/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/zettle/migrations/: 0001_initial.py
docs/: canvas.md
frontend/: styles.css
frontend/widgets/zettlecards/: Header.vue  Sidebar.vue  ZettleCard.vue  ZettleCards.vue  main.ts  types.ts
garden/: conftest.py  urls.py  wsgi.py
garden/core/: admin.py  apps.py  factories.py  models.py  tests.py
garden/core/management/commands/: create_demo_data.py
garden/core/migrations/: 0001_initial.py
garden/settings/: Caddyfile  common.py  dev.py  prod.py  testing.py
garden/templates/: base.html
garden/templates/core/: card_confirm_delete.html  card_detail.html  card_form.html  card_list.html
